[tool.poetry]
name = "threshold-crypto"
version = "0.3.0"
description = "ElGamal-based threshold decryption"
authors = ["Tom Petersen <your.email@example.com>"]
license = "MIT"
homepage = "https://github.com/tompetersen/threshold-crypto"
repository = "https://github.com/tompetersen/threshold-crypto"
keywords = ["elgamal", "threshold", "decryption"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pynacl = "^1.4.0"
pycryptodome = "^3.18.0"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
SQLAlchemy = "^1.4"
alembic = "^1.13.3"
black = "^24.8.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "identikey.cli:main"
start = "main:start"
alembic = "alembic.config:main"