[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "threshold-crypto"
version = "0.3.1"
description = "Distributed Key Generation for IdentiKey"
authors = [
    {name = "Duke Jones", email = "your.email@example.com"},
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "pynacl>=1.4.0",
    "pycryptodome>=3.18.0",
    "fastapi>=0.95.1",
    "uvicorn>=0.22.0",
    "SQLAlchemy>=1.4",
    "alembic>=1.13.3",
    "requests>=2.32.3",
]

[project.scripts]
ikey = "identikey.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["identikey*", "threshold_crypto*"]

